			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05e: *********************************

BUG: (1/27/07, DN) Some regression tests failed on JDK 1.6 because of HashSet order.
FIX: In PAL, TEGAS and LENetlister1 use TreeSet instead of HashSet. Regression results updated.

BUG: (1/25/07, SMR) Outline information is no longer specified relative to node.
     Cleaned up EDIF, CIF, DXF, GDS, Sue input.

************************* Version 8.05d: *********************************

IMP: (1/24/07, SMR) First working version of Sea-Of-Gates router.

BUG: (1/23/07, SMR) Text cell I/O should give proper warnings (Bug #1271).
FIX: In TextWindow.java, added error messages and valid file checks.

IMP/MAN: (1/19/07, GVG) Import of Verilog files in FileMenu

BUG: (1/19/07, DN) Cell.isInUse() returns false for schematics cells regardless if icon is an instance elsewhere (Bug #511).
FIX: Check icon cells also in Cell.isInUse().

IMP/MAN: (1/17/07, SMR) Initial code for Sea-of-Gates router.

IMP: (1/17/07, SMR) Generalized RTNode to handle a RTBounds object.

BUG: (1/8/07, SMR) Explorer tree forgets the expanded state of cell groups (Bug #1246).
FIX: Added an "equals" method to CellGroup so that it could compare these
     temporary objects by name.

IMP: (1/5/07, SMR) Improved maze router and regressions.

IMP: (1/5/07, SMR) Improved "copy topology" routing command to handle busses.
     Added two more regressions.

IMP: (1/3/07, SMR) Compaction tests (from the test menu) work now.

BUG/MAN: (1/3/07, SMR) Cannot drag multiple signals from explorer tree to waveform window.
FIX: In ExplorerTree.java, redid implementation of drag-and-drop from the tree.
     This has the side-effect of disabling the right-click-drag of cells from one library
     to another (which used to cause the entire tree to be copied, see bug #630).
